--- a/acydgallery/src/components/styles/logo.css
+++ b/acydgallery/src/components/styles/logo.css
@@ -1,17 +1,21 @@
 .logo {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-start;
   z-index: 5;
   transition: all 0.3s ease;
+  margin-top: 200px;
 }
 
 .logo img.acydgallery {
   max-width: 300px;
   height: auto;
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
   filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.3));
+  margin-top: -190px;
 }
 
 .logo img.acydgallery:hover {
